# storage/api-docs/api-docs.json
@@ -13,12 +13,96 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/v1/admin/create": {
+            "post": {
+                "tags": [
+                    "Admin Api Endpoints"
+                ],
+                "summary": "Create admin acccount",
+                "operationId": "57342e80c89b23238560d2a83f1c051f",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/x-www-form-urlencoded": {
+                            "schema": {
+                                "required": [
+                                    "first_name",
+                                    "last_name",
+                                    "email",
+                                    "password",
+                                    "password_confirmation",
+                                    "avatar",
+                                    "address",
+                                    "phone_number"
+                                ],
+                                "properties": {
+                                    "first_name": {
+                                        "description": "User firstname Email",
+                                        "type": "string"
+                                    },
+                                    "last_name": {
+                                        "description": "User lastname",
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "description": "User Email",
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "description": "User password",
+                                        "type": "string"
+                                    },
+                                    "password_confirmation": {
+                                        "description": "User password",
+                                        "type": "string"
+                                    },
+                                    "avatar": {
+                                        "description": "Avatar image UUID",
+                                        "type": "string"
+                                    },
+                                    "address": {
+                                        "description": "User main address",
+                                        "type": "string"
+                                    },
+                                    "phone_number": {
+                                        "description": "User main  phone number",
+                                        "type": "string"
+                                    },
+                                    "marketing": {
+                                        "description": "User marketing preferences",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Page not found"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
         "/api/v1/admin/login": {
             "post": {
                 "tags": [
                     "Admin Api Endpoints"
                 ],
-                "summary": "Login",
+                "summary": "Login admin account",
                 "operationId": "aa49799d4eca446aa5510bde08de9415",
                 "requestBody": {
                     "required": true,
@@ -68,7 +152,7 @@
                 "tags": [
                     "Admin Api Endpoints"
                 ],
-                "summary": "Logout",
+                "summary": "Logout admin account",
                 "operationId": "f2af2454915c73a6b11d0442008a1138",
                 "responses": {
                     "200": {
